<resources>
    <string name="interstitial_id">"ca-app-pub-3940256099942544/1033173712"</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">Battery Save</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="cleaned">Cleaned (%1$s)</string>
    <string name="new_app_name">battery saver</string>
    <string name="SieuToiUu">SUPER OPTIMIZER</string>
    <string name="Five_Second">5 SECONDS</string>
    <string name="Chung">GENERAL</string>
    <string name="fifteenSecond">15 Second</string>
    <string name="ThoiGianNgu">SLEEP TIME</string>
    <string name="TuyChinh">CUSTOM</string>
    <string name="Thirty_Second">30 Second</string>
    <string name="one_minute">1 Minute</string>
    <string name="fifteen_minute">15 Minutes</string>
    <string name="thirty_minute">30 Minutes</string>
    <string name="On">On</string>
    <string name="OFF">Off</string>
    <string name="battery_save">BATTERY SAVE</string>
    <string name="author">Author:</string>
    <string name="hdp_solutions">HDP Solutions</string>
    <string name="pricacy_polycy">Pricacy Polycy :</string>
    <string name="support_hdpsolutions_com">support@hdpsolutions.com</string>
    <string name="ok">OK</string>
    <string name="thong_bao">Notification</string>
    <string name="loi_tat_toi_uu">Create an optimization shortcut</string>
    <string name="loi_tat_tiet_kiem_pin">Create a battery saver shortcut</string>
    <string name="canh_bao_pin_yeu">Low battery warning</string>
    <string name="danh_gia">Rate</string>
    <string name="scanning">scanning...</string>
    <string name="toi_uu_hoa">Optimization</string>
    <string name="chia_se">Share</string>
    <string name="cai_dat">SETTING</string>
    <string name="tuy_chon_nang_luong">"OPTIMIZE NOW "</string>
    <string name="ung_dung_tieu_ton_pin">Battery-consuming applications</string>
    <string name="canh_bao">" Warning"</string>
    <string name="pin_yeu">"Low battery "</string>
    <string name="so_pin_hien_tai">" Current battery"</string>
    <string name="thoi_gian_con">Time remaining</string>
    <string name="sieu_toi_uu">REGIME:</string>
    <string name="sieu_tiet_kiem_pin">BATTERY SAVER</string>
    <string name="nhiet_do_pin">Battery temperature</string>
    <string name="dien_ap">" Voltage"</string>
    <string name="che_do">REGIME:</string>
    <string name="che_do_tiet_kiem_pin">BATTERY SAVING REGIME</string>
    <string name="tuyet_voi">GREAT</string>
    <string name="text_dialog_clear">Your device is in a lift state</string>
    <string name="dong">Close</string>
    <string name="che_do_toi_uu">Optimum mode</string>
    <string name="che_do_TKP">Battery saving regime</string>
    <string name="cap_quyen_cho_ung_dung">Application permission</string>
    <string name="quyen_noi_dung">Please provide the permissions for the application to use this application!</string>
    <string name="can_cap_quyen">You need permission to continue using</string>
    <string name="link_bao_mat">http://hdpsolution.com/privacy_policy/CameraApps/PrivacyPolicyCameraApps.htm</string>
    <string name="email_hdp">support@hdpsolutions.com</string>
    <string name="send_email">Phản hồi cho ứng dụng Battery Saver</string>
    <string name="no_client_email">Bạn không có email trong máy.</string>
    <string name="chia_se_ung_dung">Share App</string>
    <string name="thong_tin_ung_dung">Information</string>
    <string name="danh_gia_ungD">Rate</string>
    <string name="text_sieutoiuu">Clear processers running and disable services to optimize</string>
    <string name="text_chung">Enable calls and messages Disable WLAN</string>
    <string name="text_time_sleep">Keep clock, calls, and messages</string>
    <string name="text_tuy_chinh">" Your settings"</string>
    <string name="bluetooth">BlueTooth</string>
    <string name="do_sang">"Brightness "</string>
    <string name="rung">"Vibration "</string>
    <string name="thoi_gian_tat_man">Screen off time</string>
    <string name="am_thanh">"Sounds "</string>
    <string name="dong_bo_hoa">"Sync "</string>
    <string name="sieu_toi_uu_nomal">Super Optimizer</string>
    <string name="tuy_chinh_nomal">Custom</string>
    <string name="chung_nomal">General</string>
    <string name="thoi_gian_ngu_nomal">Sleep Time</string>
    <string name="Share">Share</string>
    <string name="ap_dung">APPLY</string>
    <string name="so_ung_dung_da_xoa">Number of deleted apps</string>
    <string name="tong_dung_luong">Total deleted</string>
    <string name="thoat">Exit</string>
</resources>
