<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/dialog_thongbao"
        android:layout_width="280dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tvTitleClear"
                android:textSize="18sp"
                android:textColor="@color/colorText"
                android:text="@string/tuyet_voi"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>


        <TextView
            android:id="@+id/tvNoiDungDialog"
            android:gravity="center"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dialog_clear"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCloseDialog"
            android:background="@drawable/bt_noti"
            android:layout_marginTop="10dp"
            android:text="@string/dong"
            android:layout_gravity="center"
            android:layout_width="160dp"
            android:layout_height="50dp" />

    </LinearLayout>

</LinearLayout>