<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.TuyChonNangLuong">
    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <ImageView
            android:id="@+id/iv_back_nang_luong"
            android:layout_marginLeft="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/button_back"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp" />
        <TextView
            android:id="@+id/title_nangluong"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorText"
            android:text="@string/tuy_chon_nang_luong"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@id/layout1"
       android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_390sdp">

        <TextView
            android:id="@+id/app"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorText"
            android:text="@string/ung_dung_tieu_ton_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#52ffffff"
            android:layout_width="match_parent"
            android:layout_height="1dp">
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ListView
            android:id="@+id/lv_list_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
            <LinearLayout
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <com.battery.saver.batterysaver.widgets.RotateLoading
                android:id="@+id/rotate_loading"
                android:layout_width="88.0dip"
                android:layout_height="88.0dip"
                android:layout_gravity="center" />
            <TextView
                android:textColor="@color/colorText"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center"
                android:id="@+id/progressBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4.0dip"
                android:singleLine="true"
                android:text="@string/scanning"
                android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_above="@id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        >
        <Button
            android:id="@+id/btn_clear_app"
            android:background="@drawable/button_chon"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/toi_uu_hoa"
            android:textColor="#000"
            android:textSize="@dimen/_11sdp" />


    </RelativeLayout>
    <com.google.android.gms.ads.AdView
        android:layout_marginTop="4dp"
        android:layout_gravity="center"
        android:id="@+id/adView"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>