<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/dialog_dosang">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/so_ung_dung_da_xoa"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_15sdp" />
        <TextView
            android:id="@+id/app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="10"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_15sdp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/dialog_dosang">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/tong_dung_luong"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_15sdp" />
        <TextView
            android:id="@+id/memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="10"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/dialog_dosang">
        <Button
            android:id="@+id/iv_close_dialog_toi_uu"
            android:text="@string/thoat"
            android:background="#96bdd6"
            android:layout_centerInParent="true"
            android:layout_width="100dp"
            android:layout_height="35dp" />

    </RelativeLayout>

</LinearLayout>